--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
 <meta charset ="UTF-8">
 <title>Happy Teddy</title>
 <div>
-<img src="">
+<img src="https://cdn.pixabay.com/photo/2014/09/15/21/01/teddy-bear-447416_640.png">
 </div>
 </head>
 
 <body>
 <div>
 <p>
+Unser Familienunternehmen wurde vor 100 Jahren gegründet. Wir begannen in unserer Garage, indem wir mit viel Liebe zum Detail und Kreativität niedliche Stofftiere entwarfen und handfertigten.
 
+Die Marke wird für ihre Qualität, Originalität und soziale Verantwortung geschätzt.
+
+Das Unternehmen organisiert auch regelmäßig Wohltätigkeitsveranstaltungen, bei denen Kuscheltiere an Kinder in Not oder Krankenhäuser gespendet werden, um ein Lächeln auf die Gesichter derjenigen zu zaubern, die es am meisten benötigten.
 </p>
 </div>
 
 <div>
-<a href="http://172.105.247.166/~diana/Team-1/Team-1/Produkte.html>Produkt Uebersicht</a>
+<a href="http://172.105.247.166/~diana/Team-1/Team-1/Produkte.html>Produkt Übersicht</a>
 </div>
 </body>
 </html>
