--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
+<link rel="stylesheet" type=text/css" href="stylesheet.css"/>
 <meta charset ="UTF-8">
 <title>Happy Teddy</title>
 <div>
