--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -6,6 +7,7 @@
 <meta charset ="UTF-8">
 <title>Happy Teddy</title>
 <div>
+<h1>Happy Teddy</h1>
 <img src="https://cdn.pixabay.com/photo/2014/09/15/21/01/teddy-bear-447416_640.png">
 </div>
 </head>
