--- a/index.html
+++ b/index.html
@@ -1,18 +1,19 @@
 
 
+
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
 <link rel="stylesheet" type=text/css" href="stylesheet.css"/>
 <meta charset ="UTF-8">
 <title>Happy Teddy</title>
-<div>
-<h1>Happy Teddy</h1>
-<img src="https://cdn.pixabay.com/photo/2014/09/15/21/01/teddy-bear-447416_640.png">
-</div>
 </head>
 
 <body>
+<h1>Teddy Bear</h1>
+<div> <img src="https://cdn.pixabay.com/photo/2014/09/15/21/01/teddy-bear-447416_640.png">
+</div>
 <div>
 <p>
 Unser Familienunternehmen wurde vor 100 Jahren gegründet. Wir begannen in unserer Garage, indem wir mit viel Liebe zum Detail und Kreativität niedliche Stofftiere entwarfen und handfertigten.
