--- a/Produkte.html
+++ b/Produkte.html
@@ -3,4 +3,47 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Happyteddy Produktübersicht<title/>
-  <link rel="stylesheet" type="text/css" href="stylesheet.
+  <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+</head>
+<body>
+  <h1>Happyteddy</h1>
+  <div>
+  <p>
+  <img src="https://cdn.pixabay.com/photo/2014/09/15/21/01/teddy-bear-447416_640.png" width="200px" height="200"/>
+  </p>
+  </div>
+  <div>
+    <h2>Produktübersicht</h2>
+  </div>
+  <div>
+    <p>Teddy</p>
+    <p>
+      <img src="https://cdn.pixabay.com/photo/2018/01/30/01/54/teddy-3117759_640.jpg" width="280" height="200"/>
+    </p>
+    <p>
+      <a href="" target="_self">Teddy</a>
+    </p>
+  </div>
+  <div>
+    <p>Schaf Beba</p>
+    <p>
+      <img src="https://cdn.pixabay.com/photo/2016/01/19/10/46/teddy-bears-1148352_640.jpg" width="280" height="200"/>
+    </p>
+    <p>
+      <a href="" target="_self">Schaf Beba</a>
+    </p>
+  </div>
+  <div>
+    <p>Ente Tati</p>
+    <p>
+      <img src="https://cdn.pixabay.com/photo/2018/01/24/21/01/duck-3104785_640.jpg" width="280" height="200"/>
+    </p>
+    <p>
+      <a href="" target="_self">Ente Tati</a>
+    </p>
+  </div>
+  <div>
+    <a href="" target="_self">Home</a>
+  </div>
+</body>
+</html>
