--- a/Produkte.html
+++ b/Produkte.html
@@ -3,7 +3,18 @@
 <head>
   <meta charset="UTF-8"/>
   <title>Happyteddy Produktübersicht<title/>
-  <link rel="stylesheet" type="text/css" href="stylesheet.css"/>
+<style>
+
+        body {font-family:Calibri;
+         background-color:F2F2F2;
+         text-align:center }
+        h1 {color:#A6633C; font-weight:bold; }
+        table {width:100%;  }
+        p {color:#401A0C;
+        font-style:italic;}
+        a {color:#A65A3F; font-weight:bold; background-color:#401A0C; }
+
+</style>
 </head>
 <body>
   <h1>Happyteddy</h1>
