--- a/ProduktX.html
+++ b/ProduktX.html
@@ -4,4 +4,21 @@
     <!-- Produktseite Teddy-->
     <meta charset="UTF-8"/>
     <title> HappyTeddy Produkt Teddy </title>
+    <style>
+    <link rel="stylesheet" tape="text/css" href="stylesheet.css"/>   
+    </style>
+  </head>
+  <body>
+    <h1>HappyTeddy</h1>
+    <img src="https://cdn.pixabay.com/photo/2014/09/15/21/01/teddy-bear-447416_640.png" width="200px" height="200px"/>
+    <div> 
+      <h2> Teddy</h2>
+      <p> Kuscheliges Tier – der Favorit jeden Kindes. Besonders weich und kuschelig.</p>
+      <img src="https://cdn.pixabay.com/photo/2018/01/30/01/54/teddy-3117759_640.jpg" width="200px" height="150px"/>
+      <p> Preis: €15,- </p>
+      <p> Home </p>
+      <a href="" target="self"> </a>    
+    </div>
+    
+  </body>
 
