--- a/index.html
+++ b/index.html
@@ -2,10 +2,14 @@
 
 
 
+
+
 <!DOCTYPE html>
 <html lang="de">
 <head>
+<style>
 <link rel="stylesheet" type=text/css" href="stylesheet.css"/>
+</style>
 <meta charset ="UTF-8">
 <title>Happy Teddy</title>
 </head>
