--- a/Produkte.html
+++ b/Produkte.html
@@ -54,7 +54,7 @@
     </p>
   </div>
   <div>
-    <a href="" target="_self">Home</a>
+    <a href="http:/172.105.247.166/~diana/Team-1/index.html" target="_self">Home</a>
   </div>
 </body>
 </html>
