--- a/ProduktX.html
+++ b/ProduktX.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8"/>
     <title> HappyTeddy Produkt Teddy </title>
     <style>
-    <link rel="stylesheet" tape="text/css" href="stylesheet.css"/>   
+ body {font-family:Calibri;
+         background-color:F2F2F2;
+         text-align:center }
+        h1 {color:#A6633C; font-weight:bold; }
+        table {width:100%;  }
+        p {color:#401A0C;
+        font-style:italic;}
+        a {color:#A65A3F; font-weight:bold; background-color:#401A0C; }  
     </style>
   </head>
   <body>
@@ -17,7 +24,7 @@
       <img src="https://cdn.pixabay.com/photo/2018/01/30/01/54/teddy-3117759_640.jpg" width="200px" height="150px"/>
       <p> Preis: €15,- </p>
       <p> Home </p>
-      <a href="" target="self"> </a>    
+      <a href=" http:/172.105.247.166/~diana/Team-1/index.html" target="self"> </a>    
     </div>
     
   </body>
