--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 
-
-
-
-
-
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
 <style>
+ body {font-family:Calibri;
+         background-color:F2F2F2;
+         text-align:center }
+        h1 {color:#A6633C; font-weight:bold; }
+        table {width:100%;  }
+        p {color:#401A0C;
+        font-style:italic;}
+        a {color:#A65A3F; font-weight:bold; background-color:#401A0C; }
 <link rel="stylesheet" type=text/css" href="stylesheet.css"/>
 </style>
 <meta charset ="UTF-8">
