--- a/ProduktX.html
+++ b/ProduktX.html
@@ -23,8 +23,9 @@
       <p> Kuscheliges Tier – der Favorit jeden Kindes. Besonders weich und kuschelig.</p>
       <img src="https://cdn.pixabay.com/photo/2018/01/30/01/54/teddy-3117759_640.jpg" width="200px" height="150px"/>
       <p> Preis: €15,- </p>
-      <p> Home </p>
-      <a href="http:/172.105.247.166/~diana/Team-1/index.html" target="self"> </a>    
+      <p> 
+        <a href="http:/172.105.247.166/~diana/Team-1/index.html" target="self"> Home </a>
+      </p>    
     </div>
     
   </body>
