--- a/ProduktX.html
+++ b/ProduktX.html
@@ -24,7 +24,7 @@
       <img src="https://cdn.pixabay.com/photo/2018/01/30/01/54/teddy-3117759_640.jpg" width="200px" height="150px"/>
       <p> Preis: €15,- </p>
       <p> 
-        <a href="index.html" target="self">HomE</a>
+        <a href="index.html">Home</a>
       </p>    
     </div>
     
