--- a/Produkte.html
+++ b/Produkte.html
@@ -2,7 +2,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8"/>
-  <title>Happyteddy Produktübersicht<title/>
+  <title>Happyteddy Produktübersicht</title>
 <style>
 
         body {font-family:Calibri;
